--- a/npmpackages/nx-workspace/package.json
+++ b/npmpackages/nx-workspace/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mm1802/react-scroll": "^1.0.2",
     "@swc/helpers": "~0.5.0",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
