--- a/npmpackages/http-react-provider/package.json
+++ b/npmpackages/http-react-provider/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "http",
+  "name": "@mm1802/http-react-provider",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf dist",
+    "build": "npm run clean && tsc && cp package.json README.md ./dist"
   },
   "keywords": [],
   "author": "",
